Updated Index.html to add all the socials and a few rickroll links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="content">
 			<h4>THIS WEBSITE ISN'T COMPLETE, ANY INFORMATION HERE ISN'T 100% ACCURATE.</h4>
 			<h1>Love<span>Life</span></h1>
-			<h3>I'am a Developer.</h3>
+			<h3>I am a Developer.</h3>
 		</div>
 	</div>
 
@@ -64,18 +64,18 @@
 
 			<div class="card">
 				<i class="fa-solid fa-code"></i>
-				<h5>Web Development</h5>
+				<h5>Coding</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>Life is your average developer, they love to code when they get time and still learning to master languages. Some main languages that life codes in include Python, Css, Html, .Js. Also this is the 69th line in the code. Nice. https://imgur.com/a/wTGqOme</p>
 
 				</div>
 			</div>
 
 			<div class="card">
 				<i class="fa-solid fa-building-shield"></i>
-				<h5>Web Development</h5>
+				<h5>Administration and Moderation</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>Life's Legacy in administration and moderation is pretty diverse; Dank Paradise, IIS on Discord, Dank Memer Loan Team are just few examples of servers that life used to moderate/administrate before.   </p>
 				</div>
 			</div>
 		</div>
@@ -83,20 +83,22 @@
 
 	<!------Contact Me------>
 	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="#">Hire Me</a>
+		<p>Let me get you a free website with unlimited hosting.</p>
+		<a class="button-two" href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Hire Me</a>
 	</div>
 
 	<!------footer start--------->
 	<footer>
-		<p>Tahmid Ahmed</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<p>Life</p>
+		<p>Check out my socials!</p>
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
+			<a href="https://www.reddit.com/user/Iamverycool1" target="_blank"><i class="fa-brands fa-reddit"></i></a>
+			<a href="https://www.instagram.com/real_lovelife__/" target="_blank"><i class="fab fa-instagram"></i></a>
+			<a href="https://github.com/Real-LoveLife-LD" target="_blank"><i class="fa-brands fa-github"></i></a>
+	    <a href="https://twitter.com/real_lovelife__"_blank"><i class="fa-brands fa-twitter"></i></a>
+	    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><i class="fa-brands fa-youtube"></i></a>
 		</div>
-		<p class="end">CopyRight By Tahmid Ahmed</p>
+		<p class="end"><a href="https://github.com/Real-LoveLife-LD/aboutme" target="_blank">Source Code</a></p>
 	</footer>
 </body>
 </html>
