--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+
 	<!----hero Section start---->
 
 	<div class="hero">
@@ -48,6 +49,27 @@
 	</section>
 
 	<!-----service section start----------->
+	<style>
+a:link {
+  color: lightgreen;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: bold;
+}
+a:hover {
+  color: lightcyan;
+  background-color: transparent;
+}
+a:active {
+  color: darkblue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
 	<div class="service">
 		<div class="title">
 			<h2>Life's Legacy</h2>
