Changed Pic in about changed img credits and fixed a grammar error in the about me.

--- a/bonk.html
+++ b/bonk.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<! Zarah dumb lol >
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -22,12 +21,12 @@
 			<h2 class="logo">Portfo<span>lio</span></h2>
 			<ul>
 				<li><a href="#">Home</a></li>
-				<li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">This</a></li>
-				<li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">Button</a></li>
-				<li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">Does</a></li>
-				<li><a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank">Nothing</a></li>
+				<li><a href="#">This</a></li>
+				<li><a href="#">Button</a></li>
+				<li><a href="#">Does</a></li>
+				<li><a href="#">Nothing</a></li>
 			</ul>
-			<a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" target="_blank" class="btn">Don't Click Me</a>
+			<a href="#" class="btn">Subscribe</a>
 		</nav>
 
 		<div class="content">
@@ -40,13 +39,13 @@
 	<section class="about">
 		<div class="main">
 	<div class="main-content-image">
-	<img src="https://i.imgur.com/OHi7pxA.png">
+	<img src="https://i.imgur.com/ekqdVBr.jpeg">
 </div>
 			<div class="about-text">
 				<h2>About Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a full stack developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device; Mac, IOS, Windows Android(cringe). You Pick. Fun fact: I frequently update the picture on the side so the next time you log on, the image might be different. </p> 
-				<button type="button">Image Credits to Zahra</button>
+				<p>I am a full stack developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device; Mac, IOS, Windows Android(cringe). You Pick.</p> 
+				<button type="button">Image Credits to Saymizan#6467</button>
 			</div>
 		</div>
 	</section>
@@ -124,11 +123,9 @@ a:active {
 			<a href="https://www.reddit.com/user/Iamverycool1" target="_blank"><i class="fa-brands fa-reddit"></i></a>
 			<a href="https://www.instagram.com/real_lovelife__/" target="_blank"><i class="fab fa-instagram"></i></a>
 			<a href="https://github.com/Real-LoveLife-LD" target="_blank"><i class="fa-brands fa-github"></i></a>
-	    <a href="https://twitter.com/real_lovelife__" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-	    <a href="https://www.tiktok.com/@real_lovelife__" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+	    <a href="https://twitter.com/real_lovelife__"_blank"><i class="fa-brands fa-twitter"></i></a>
 	    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><i class="fa-brands fa-youtube"></i></a>
 		</div>
-	
   
 		<p class="end"><a href="https://github.com/Real-LoveLife-LD/aboutme" target="_blank">Source Code</a></p>
 	</footer>
