Heavy Redesign and Bug fixes.

--- a/bonk.html
+++ b/bonk.html
@@ -12,122 +12,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
-<body>
-
-	<!----hero Section start---->
-
-	<div class="hero">
-		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">This</a></li>
-				<li><a href="#">Button</a></li>
-				<li><a href="#">Does</a></li>
-				<li><a href="#">Nothing</a></li>
-			</ul>
-			<a href="#" class="btn">Subscribe</a>
-		</nav>
-
-		<div class="content">
-			<h3>Hello, I am</h3>
-			<h1>Love<span>Life</span></h1>
-		</div>
-	</div>
-
-	<!----About section start---->
-	<section class="about">
-		<div class="main">
-	<div class="main-content-image">
-	<img src="https://i.imgur.com/ekqdVBr.jpeg">
-</div>
-			<div class="about-text">
-				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a full stack developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device; Mac, IOS, Windows Android(cringe). You Pick.</p> 
-				<button type="button">Image Credits to Saymizan#6467</button>
-			</div>
-		</div>
-	</section>
-
-	<!-----service section start----------->
-	<style>
-a:link {
-  color: lightgreen;
-  background-color: transparent;
-  text-decoration: none;
-}
-a:visited {
-  color: pink;
-  background-color: transparent;
-  text-decoration: bold;
-}
-a:hover {
-  color: lightcyan;
-  background-color: transparent;
-}
-a:active {
-  color: darkblue;
-  background-color: transparent;
-  text-decoration: underline;
-}
-</style>
-	<div class="service">
-		<div class="title">
-			<h2>Life's Legacy</h2>
-		</div>
-
-		<div class="box">
-			<div class="card">
-				<i class="fa-solid fa-crown"></i>
-				<h5>Ownership of Servers</h5>
-				<div class="pra">
-					<p>Life has owned over 5 discord servers with a total peak of 4k members; however due to a few irl reasons they had to be shut down and deleted, however <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">LD</a> and <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">DG</a> still exist.</p>
-				</div>
-			</div>
-
-			<div class="card">
-				<i class="fa-solid fa-code"></i>
-				<h5>Coding</h5>
-				<div class="pra">
-					<p>Life is your average developer, they love to code when they get time and still learning to master languages. Some main languages that life codes in include Python, Css, Html, .Js. Also this is the 69th line in the code. <a href="https://imgur.com/a/wTGqOme">Nice.</a> </p>
-
-				</div>
-			</div>
-
-			
-			<div class="card">
-				<i class="fa-solid fa-building-shield"></i>
-				<h5>Administration and Moderation</h5>
-				<div class="pra">
-					<p>Life's Legacy in administration and moderation is pretty diverse; Dank Paradise, IIS on Discord, Dank Memer Loan Team are just few examples of servers that life used to moderate/administrate before.   </p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	
-	<!------Contact Me------>
-	<div class="contact-me">
-		<p>Check out some of my favorite discord servers!</p>
-		<a class="button-two" href="https://discord.gg/HT8cVT3dJQ" target=_"blank">Shero's Support Server</a>
-	  <a class="button-two" href="https://discord.gg/KvJtHNKVuR" target=_"blank">Cozy Cottage</a>
-	<a class="button-two" href="https://discord.gg/qZyzhN7V7a" target=_"blank">The Dreamy</a>
-	</div>
-
-	<!------footer start--------->
-	<footer>
-		<p>Life</p>
-		<p>Check out my socials!</p>
-		<div class="social">
-			<a href="https://www.reddit.com/user/Iamverycool1" target="_blank"><i class="fa-brands fa-reddit"></i></a>
-			<a href="https://www.instagram.com/real_lovelife__/" target="_blank"><i class="fab fa-instagram"></i></a>
-			<a href="https://github.com/Real-LoveLife-LD" target="_blank"><i class="fa-brands fa-github"></i></a>
-	    <a href="https://twitter.com/real_lovelife__"_blank"><i class="fa-brands fa-twitter"></i></a>
-	    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><i class="fa-brands fa-youtube"></i></a>
-		</div>
-  
-		<p class="end"><a href="https://github.com/Real-LoveLife-LD/aboutme" target="_blank">Source Code</a></p>
-	</footer>
+<body>	
+Does life have permission to bonk you?
+	<a class="button-two" href="https://www.youtube.com/watch?v=cW37LQ8NRRc">Yes <i class="fa-solid fa-badge-check"></i></a>
+	<a class="button-two" href="https://www.youtube.com/watch?v=xvFZjo5PgG0">No <i class="fa-solid fa-xmark-large"></i></a>
 </body>
 </html>
