--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<! Zarah dumb lol >
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z23W8MX0PY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z23W8MX0PY');
+</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -40,13 +48,14 @@
 	<section class="about">
 		<div class="main">
 	<div class="main-content-image">
-	<img src="https://i.imgur.com/OHi7pxA.png">
-</div>
+	<img src="https://cdn.discordapp.com/attachments/750935879022936104/964841866438799370/5384970.jpg">
+</div> 
 			<div class="about-text">
-				<h2>About Me</h2>
+				<h2><span>About</span> Me</h2>
 				<h5>Developer <span>& Designer</span></h5>
 				<p>I am a full stack developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device; Mac, IOS, Windows Android(cringe). You Pick. Fun fact: I frequently update the picture on the side so the next time you log on, the image might be different. </p> 
-				<button type="button">Image Credits to Zahra</button>
+			<button type="button">Image Credits to <a href="https://wallpaperaccess.com/aesthetic-car" target_"blank">Aesthetic Car Images</a>
+</button>
 			</div>
 		</div>
 	</section>
@@ -61,7 +70,7 @@ a:link {
 a:visited {
   color: pink;
   background-color: transparent;
-  text-decoration: bold;
+  text-decoration: bold; 
 }
 a:hover {
   color: lightcyan;
@@ -75,13 +84,13 @@ a:active {
 </style>
 	<div class="service">
 		<div class="title">
-			<h2>Life's Legacy</h2>
+			<h2>Life's <span>Legacy</span></h2>
 		</div>
 
 		<div class="box">
 			<div class="card">
 				<i class="fa-solid fa-crown"></i>
-				<h5>Ownership of Servers</h5>
+				<h5>Ownership <span>of</span> Servers</h5>
 				<div class="pra">
 					<p>Life has owned over 5 discord servers with a total peak of 4k members; however due to a few irl reasons they had to be shut down and deleted, however <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">LD</a> and <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">DG</a> still exist.</p>
 				</div>
@@ -89,9 +98,9 @@ a:active {
 
 			<div class="card">
 				<i class="fa-solid fa-code"></i>
-				<h5>Coding</h5>
+				<h5>Cod<span>ing</span></h5>
 				<div class="pra">
-					<p>Life is your average developer, they love to code when they get time and still learning to master languages. Some main languages that life codes in include Python, Css, Html, .Js. Also this is the 69th line in the code. <a href="https://imgur.com/a/wTGqOme">Nice.</a> </p>
+					<p>Life is your average developer, they love to code when they get time and still learning to master languages. Some main languages that life codes in include Python, Css, Html, .Js. Also this is the 69th line in the code. <a href="https://imgur.com/a/wTGqOme" target=_"blank">Nice.</a> </p>
 
 				</div>
 			</div>
@@ -99,7 +108,7 @@ a:active {
 			
 			<div class="card">
 				<i class="fa-solid fa-building-shield"></i>
-				<h5>Administration and Moderation</h5>
+				<h5>Administration <span>and</span> Moderation</h5>
 				<div class="pra">
 					<p>Life's Legacy in administration and moderation is pretty diverse; Dank Paradise, IIS on Discord, Dank Memer Loan Team are just few examples of servers that life used to moderate/administrate before.   </p>
 				</div>
@@ -111,9 +120,9 @@ a:active {
 	<!------Contact Me------>
 	<div class="contact-me">
 		<p>Check out some of my favorite discord servers!</p>
-		<a class="button-two" href="https://discord.gg/HT8cVT3dJQ" target=_"blank">Shero's Support Server</a>
+		<div class="shero"><a class="button-two" href="https://discord.gg/HT8cVT3dJQ" target=_"blank">Shero's Support Server</a> </div>
 	  <a class="button-two" href="https://discord.gg/KvJtHNKVuR" target=_"blank">Cozy Cottage</a>
-	<a class="button-two" href="https://discord.gg/qZyzhN7V7a" target=_"blank">The Dreamy</a>
+	  <div class="dreamy"><a class="button-two" href="https://discord.gg/qZyzhN7V7a" target=_"blank">The Dreamy</a></div>
 	</div>
 
 	<!------footer start--------->
@@ -132,5 +141,6 @@ a:active {
   
 		<p class="end"><a href="https://github.com/Real-LoveLife-LD/aboutme" target="_blank">Source Code</a></p>
 	</footer>
+Hey kid, if you don't follow me on my social medias. I'll eat all of your cookies. 😈😈 This is a Threat. You are afraid of this Threat.
 </body>
 </html>
