I did something. I have no idea what I did. I hope what I did was right. If what I did was right it will work. else it doesn't work.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z23W8MX0PY"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-Z23W8MX0PY');
-</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -40,7 +31,9 @@
 
 		<div class="content">
 			<h3>Hello, I am</h3>
-			<h1>Love<span>Life</span></h1>
+			<div class="demo-typewriter">
+  <span>Love Life</span>
+</div>
 		</div>
 	</div>
 
@@ -55,7 +48,7 @@
 				<h5>Developer <span>& Designer</span></h5>
 				<p>I am a full stack developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations. A responsive design makes your website accessible to all users, regardless of their device; Mac, IOS, Windows Android(cringe). You Pick. Fun fact: I frequently update the picture on the side so the next time you log on, the image might be different. </p> 
 			<button type="button">Image Credits to <a href="https://wallpaperaccess.com/aesthetic-car" target_"blank">Aesthetic Car Images</a>
-</button>
+</button> 
 			</div>
 		</div>
 	</section>
@@ -68,14 +61,14 @@ a:link {
   text-decoration: none;
 }
 a:visited {
-  color: pink;
+  color: #9932CC;
   background-color: transparent;
   text-decoration: bold; 
 }
 a:hover {
-  color: lightcyan;
-  background-color: transparent;
-}
+  color: #FF69B4;
+  background-color: black;
+} 
 a:active {
   color: darkblue;
   background-color: transparent;
@@ -124,6 +117,8 @@ a:active {
 	  <a class="button-two" href="https://discord.gg/KvJtHNKVuR" target=_"blank">Cozy Cottage</a>
 	  <div class="dreamy"><a class="button-two" href="https://discord.gg/qZyzhN7V7a" target=_"blank">The Dreamy</a></div>
 	</div>
+
+	<!------
 
 	<!------footer start--------->
 	<footer>
