--- a/isritikadalwaleanasshole.html
+++ b/isritikadalwaleanasshole.html
@@ -17,7 +17,7 @@ Is Ritika Dalwale an asshole?
 	<a class="button-two" href="https://www.youtube.com/watch?v=cW37LQ8NRRc">Yes <i class="fa-solid fa-badge-check"></i></a>
 	<a class="button-two" href="https://www.youtube.com/watch?v=cW37LQ8NRRc">Yes <i class="fa-solid fa-xmark-large"></i></a>
 
-Does Ritika like Daiwik?
+Does Ritika Dalwale like Daiwik?
 	<a class="button-two" href="https://www.youtube.com/watch?v=cW37LQ8NRRc">Yes <i class="fa-solid fa-badge-check"></i></a>
 	<a class="button-two" href="https://www.youtube.com/watch?v=cW37LQ8NRRc">Yes <i class="fa-solid fa-xmark-large"></i></a>
 </body>
